Update to 1.21.11
- Rework InfoRenderer
- More fixes and updates
- Update image rendering
- Remove @OnlyIn
- Fix server
- Guidebook model files
- Use FMLLoader to check dev environment instead of launch target
- Update recipe rendering
- Starting work on recipes
- Compiles and starts, but still some work todo
- Rework rendering, other updates and temporary removal
- New key/mouse press events
- Prepare 1.21.11 update
- Continue 1.21.4 update
- Begin 1.21.4 port.
Not sure about GUI rendering yet, probably should migrate to blitSprite